@@ -1,12 +1,12 @@
-S3method(Disconnect,TFXsession)
-S3method(Reconnect,TFXsession)
-S3method(isActive,TFXsession)
-S3method(print,TFXsession)
 export(ConnectTrueFX)
 export(Disconnect)
+export(isActive)
 export(ParseTrueFX)
 export(QueryTrueFX)
 export(Reconnect)
 export(TrueFXRef)
-export(isActive)
 importFrom(XML,readHTMLTable)
+S3method(Disconnect,TFXsession)
+S3method(isActive,TFXsession)
+S3method(print,TFXsession)
+S3method(Reconnect,TFXsession)
